# Grae-X-AlgoScope

./: .gitignore  QA.Md  README.md  app.py  app.py.backup  attack_report.json  audit.json  docker-compose.yml  final_test.py  gsc_service_account.json  pyproject.toml  quick_debug.py  requirements.txt  run_app.sh  run_test.py  run_web_app.bat  run_without_warnings.sh  setup.py
